[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = "A TicTacToe Game with a variety of AIs in Python"
authors = ["Paul Goedsche <paul.goedsche@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W"]
